# Music

./: .flutter-plugins-dependencies  .gitignore  .lefthook.yml  README.md  all_tests.txt  analysis.txt  analysis_report.txt  calculate_coverage.dart  check_paths.dart  consolidate_music.py  consolidate_processes.py  coverage.json  debug_output.text  debug_player_screen.txt  debug_search_page.txt  debug_search_page_2.txt  debug_search_page_3.txt  debug_settings_page.txt  debug_settings_page_2.txt  debug_settings_page_3.txt  debug_settings_page_4.txt  enhancement_analysis.txt  final_analysis.txt  final_platform_analysis.txt  installer.iss  pubspec.yaml  test_output_app_shell.txt  teste.iss
.dart_tool/: package_config.json  package_graph.json
.github/: dependabot.yml  labeler.yml
.jules/: hermes.md
coverage/: lcov.info
lib/: app_shell.dart  audio_player_service.dart  auth_service.dart  auto_tag_service.dart  backup_view.dart  cast_dialog.dart  cast_service.dart  connectivity_service.dart  conversion_dialog.dart  conversion_progress_overlay.dart  conversion_service.dart  database_service.dart  dependency_manager.dart  desktop_integration_service.dart  disco_mode_view.dart  discogs_api.dart  download_page.dart  download_service.dart  (+45 more)
music_tag_editor/rust/: Cargo.toml
music_tag_editor/rust/src/: frb_generated.rs
music_tag_editor/rust/src/api/: ast.rs  cleanup.rs  database.rs  duplicates.rs  fingerprint.rs  grammar.pest  lyrics.rs  metadata.rs  mod.rs  renamer.rs  snapshots.rs  spectral.rs  sync.rs  transcode.rs  watcher.rs  windows_devices.rs  windows_shell.rs
(+810 files in other folders)
