[package]
name = "rust_lib_music_tag_editor"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
lofty = "0.21.1"
sha2 = "0.10.8"
walkdir = "2.5.0"
anyhow = "1.0.86"
rayon = "1.10.0"
regex = "1.10.5"
image = { version = "0.25.1", features = ["jpeg", "png", "webp"] }
notify = "6.1.1"
pest = "2.7.11"
pest_derive = "2.7.11"
rusqlite = { version = "0.31.0", features = ["bundled"] }
symphonia = { version = "0.5.4", features = ["all"] }
hound = "3.5.1"
reqwest = { version = "0.12.5", features = ["json", "blocking"] }
tokio = { version = "1.38.0", features = ["full"] }
serde_json = "1.0.120"
serde = { version = "1.0.204", features = ["derive"] }
rustfft = "6.2.0"
windows = { version = "0.58.0", features = ["Win32_UI_Shell", "Win32_System_Com", "Win32_Foundation", "Win32_System_Ole"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
